--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body {
-    background: grey;
+    
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
 }
@@ -31,4 +31,48 @@ img {
     margin-right: auto;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+#slider {
+    overflow: hidden;
+}
+#slider figure {
+    position: relative;
+    width: 500%;
+    margin: 0;
+    left: 0;
+    animation: 10s slider infinite;
+}
+#slider figure img {
+    float: left;
+    width: 20%;
+}
+@keyframes slider {
+    0% {
+        left: 0;
+    }
+    20% {
+        left: 0;
+    }
+    25% {
+        left: -100%;
+    }
+    45% {
+        left: -100%;
+    }
+    50% {
+        left: -200%;
+    }
+    70% {
+        left: -200%;
+    }
+    75% {
+        left: -300%;
+    }    
+    95% {
+        left: -300%;
+    }
+    100% {
+        left: -400%;
+    }
 }
