--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -22,14 +22,14 @@
 .footer-container .footer-center{
     display: flex;
     flex-direction: column;
-    row-gap: 30px;
+    row-gap: 10px;
 }
 .footer-container .footer-links{
-    padding-top: 50px;
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    row-gap: 30px;
+    row-gap: 10px;
     align-items: center;
 }
 .footer-container .footer-link{
@@ -37,7 +37,7 @@
     font-weight: bold;
     color:white;
     text-transform: capitalize;
-    transition: var(--transition);
+    transition: all 0.3s linear; 
 }
 .footer-container .footer-link.active,
 .footer-container .footer-link:hover
