--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -67,6 +67,7 @@
     flex-direction: column;
     row-gap: 10px;
     align-items: center;
+    
 }
 .menu-container .menu-links .nav-link {
     color: white;
@@ -85,9 +86,24 @@
     left: 0%;
     opacity: 1;
 }
+.menu-nav .menu-content {
+    display: none;
+}
 
+.menu-nav .menucontent {
+    
+}
 
-
+.menu-nav .menucontent h2 {
+    color: red;
+    background: black;
+}
+.menu-nav .menucontent h4 {
+    color: white;
+}
+.menu-nav .menucontent h5 {
+    color: white;
+}
 
 @media screen and (min-width:992px) {
     .menu-nav {
@@ -124,4 +140,22 @@
         letter-spacing: 1px;
         font-weight: bold;
     }
+    .menu-nav .menu-links-main {
+        display: flex;
+    }
+    
+    .menu-nav .right-side {
+        display: flex;
+        
+    }
+    .menu-nav .menu-center {
+        display: flex;
+    }
+
+    .menu-nav .menu-two-parts {
+        display: flex;
+        column-gap: 150px;
+    }
+    
+    
 }
