--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -1,5 +1,5 @@
 .menu-nav {
-    margin-top: 5px;
+    margin-top: 10px;
     background: #f857a6;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #ff5858, #f857a6);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #ff5858, #f857a6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -90,16 +90,22 @@
     display: none;
 }
 
+.middle-image img {
+    object-fit: cover; 
+    width: 375px;
+    margin-top:10px; 
+    margin-bottom: 5px;
+}
 .menu-nav .menucontent h2 {
     color: red;
-    background: black;
+    background: rgb(66, 62, 62);
     margin-top: 20px;
     margin-bottom: 10px;
     font-weight: bold;
 }
 .menu-nav .menucontent h4 {
     color: red;
-    background: black;
+    background: rgb(66, 62, 62);
     margin-top: 20px;
     letter-spacing: 1px;
     font-weight: bold;
@@ -114,6 +120,17 @@
 }
 .menu-nav .menucontent p{
     font-size: 13px;
+    color: white;
+}
+.menu-nav .arrows {
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    column-gap: 270px;
+}
+.menu-nav .arrows img{
+    width: 30px;
+
 }
 
 
@@ -144,6 +161,9 @@
         margin-left: 20px;
         background: grey;
     }
+    .menu-nav .right-image {
+        width: 25px;
+    }
     .menu-nav .nav-link {
         width: 100%;
         color: white;
@@ -152,6 +172,12 @@
         letter-spacing: 1px;
         font-weight: bold;
     }
+  .menu-nav .nav-link.active {
+    background: white;
+    color: black;
+    border-radius: 4px;
+    padding: 4px;
+  }  
     .menu-nav .menu-links-main {
         display: flex;
     }
@@ -169,5 +195,7 @@
         column-gap: 150px;
     }
     
-    
+.middle-image {
+    display: none;
+}    
 }
