--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -2,12 +2,15 @@
 .footer-container{
     width: 100%;
     min-height: 300px;
-    background: url("./../Images/Software-Testing.jpg");
+    background: #f857a6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ff5858, #f857a6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ff5858, #f857a6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
     z-index: 1;
+    margin-top: 10px;
 }
 .footer-container::before{
     content: "";
@@ -16,7 +19,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: gray;
     z-index: -1;
 }
 .footer-container .footer-center{
@@ -45,8 +47,9 @@
     text-decoration: underline;
 }
 .footer-copy-right p{
-    font-size: 16px;
+    font-size: 12px;
     color: white;
+    margin-top: 20px;
     text-transform: capitalize;
     letter-spacing: 1px;
     text-align: center;
