--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -93,6 +93,8 @@
 .middle-image img {
     align-items: center;
     width: 375px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top:10px; 
     margin-bottom: 5px;
 }
