--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -95,8 +95,9 @@
     width: 375px;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 20px;
     margin-top:10px; 
-    margin-bottom: 5px;
+
 }
 .menu-nav .menucontent h2 {
     color: red;
