--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -66,7 +66,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-    align-items: center;
+    /* align-items: center; */
     
 }
 .menu-container .menu-links .nav-link {
