--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -125,10 +125,11 @@
     color: white;
 }
 .menu-nav .arrows {
+    width: 100%;
     display: flex;
+    justify-content: space-between;
     margin-top: 20px;
     margin-bottom: 10px;
-    column-gap: 270px;
 }
 .menu-nav .arrows img{
     width: 30px;
@@ -139,12 +140,13 @@
 @media screen and (min-width:992px) {
     .menu-nav {
         width: 100%;
-        height: auto;
+        
+
     }
     .menu-nav .menu-content {
        width: 100%;
         display: flex;
-                      
+        
     }
     .menu-nav .menu-hamburger {
         display: none;
@@ -156,6 +158,7 @@
         justify-content: center;
         align-items: center;
         background: grey;
+        
     }
     .menu-nav .right-side {
         width: 70%;
@@ -182,6 +185,11 @@
   }  
     .menu-nav .menu-links-main {
         display: flex;
+        background: grey;              
+        padding-left: 10px;
+        border-radius: 15px ;
+        height: 100vh;
+        overflow-y: auto;
     }
     
     .menu-nav .right-side {
