--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -108,30 +108,42 @@
     color: red;
     background: rgb(66, 62, 62);
     margin-top: 20px;
+    margin-right: 60px;
     letter-spacing: 1px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 .menu-nav .menucontent img {
-    padding-right: 40px;
+    width: 360px;
+    padding-right: 50px;
+    
     
 }
 .menu-nav .menucontent ol {
-    margin-left: 20px;
+   width: 80%;
+    margin-left: 30px;
     color: white;
-    
+    font-size: 14px;
+}
+.menu-nav .menucontent ol li {
+    margin-top: 5px;
+
 }
 .menu-nav .menucontent h5 {
     color: white;
+    background: rgb(66, 62, 62);
     margin-top: 20px;
+    margin-left: 18px;
+    margin-right: 60px;
     letter-spacing: 1px;
-    font-size: 15px;
+    /* font-size: 15px; */
     font-weight: bold;
 }
 .menu-nav .menucontent p{
     font-size: 14px;
     color: white;
     padding-top: 5px;
+    padding-left: 10px;
 }
 .menu-nav .arrows {
     width: 100%;
