--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -102,6 +102,7 @@
     background: rgb(66, 62, 62);
     margin-top: 20px;
     margin-bottom: 10px;
+    padding-left: 20px;
     font-weight: bold;
 }
 .menu-nav .menucontent h4 {
