--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -116,7 +116,7 @@
 }
 .menu-nav .menucontent img {
     width: 393px;
-    padding-right: 5px;
+    /* padding-right: 5px; */
     padding-left: 10px;
     
 }
