--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -97,6 +97,9 @@
     margin-top:10px; 
 
 }
+.menu-nav .menucontent {
+
+}
 .menu-nav .menucontent h2 {
     color: red;
     background: rgb(66, 62, 62);
@@ -110,19 +113,23 @@
     background: rgb(66, 62, 62);
     margin-top: 20px;
     margin-right: 60px;
+    margin-left: 20px;
     letter-spacing: 1px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 .menu-nav .menucontent img {
-    width: 393px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 350px;
     /* padding-right: 5px; */
-    padding-left: 10px;
     
 }
 .menu-nav .menucontent ol {
    width: 80%;
-    margin-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
     color: white;
     font-size: 14px;
 }
