--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -101,19 +101,22 @@
 
 }
 .menu-nav .menucontent h2 {
+    width: 90%;    
     color: red;
     background: rgb(66, 62, 62);
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 20px;
     margin-bottom: 10px;
-    padding-left: 20px;
     font-weight: bold;
 }
 .menu-nav .menucontent h4 {
     color: red;
+    width: 90%;
     background: rgb(66, 62, 62);
     margin-top: 20px;
-    margin-right: 60px;
-    margin-left: 20px;
+    margin-right: auto;
+    margin-left: auto;
     letter-spacing: 1px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -122,9 +125,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 350px;
-    /* padding-right: 5px; */
-    
+    width: 90%;
 }
 .menu-nav .menucontent ol {
    width: 80%;
@@ -134,8 +135,10 @@
     font-size: 14px;
 }
 .menu-nav .menucontent ol li {
+    width: 95%;
     margin-top: 5px;
-
+    margin-left: auto;
+    margin-right: auto;
 }
 .menu-nav .menucontent h5 {
     color: white;
@@ -148,10 +151,12 @@
     font-weight: bold;
 }
 .menu-nav .menucontent p{
+    width: 90%;
     font-size: 14px;
     color: white;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 5px;
-    padding-left: 10px;
 }
 .menu-nav .arrows {
     width: 100%;
