--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,11 +38,12 @@ img {
 }
 #slider figure {
     position: relative;
-    width: 500%;
+    width: 70%%;
     margin: 0;
     left: 0;
     animation: 10s slider infinite;
 }
+
 #slider figure img {
     float: left;
     width: 20%;
@@ -75,4 +76,10 @@ img {
     100% {
         left: -400%;
     }
+}
+.middle-image img {
+    width: 90%;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
