--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -184,7 +184,7 @@
 @media screen and (min-width:992px) {
     .menu-nav {
         width: 100%;
-        
+                
 
     }
      ::-webkit-scrollbar {
@@ -215,6 +215,7 @@
         display: flex;
         margin-left: 20px;
         background: grey;
+        
     }
     .menu-nav .right-image {
         width: 25px;
@@ -222,7 +223,7 @@
     .menu-nav .nav-link {
         width: 100%;
         color: white;
-        font-size: 13px;
+        font-size: 12px;
         line-height: 2.0;
         font-weight: bold;
     }
@@ -234,10 +235,10 @@
   }  
     .menu-nav .menu-links-main {
         display: flex;
-        background: grey;              
+        /* background: grey;               */
         padding-left: 10px;
         border-radius: 15px ;
-        width: 400px;
+        width: 500px;
         height: 80vh;
         overflow-y: auto;
         
@@ -258,6 +259,11 @@
     
 .middle-image {
     display: none;
+}
+.menu-nav .menucontent {
+    width: 100%;
+    height: 80vh;
+    overflow-y: auto;
 }
 .menu-nav .menucontent h2 {
     font-size: 35px;
