--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -261,8 +261,9 @@
     display: none;
 }
 .menu-nav .menucontent {
-    width: 100%;
+    width: 80%;
     height: 80vh;
+    margin-right: 60px;
     overflow-y: auto;
 }
 .menu-nav .menucontent h2 {
