--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -41,7 +41,7 @@
     height: 100vh;
     position: fixed;
     top: 0;
-    left: 100%;
+    right: 100%;
     transition: all 0.3s linear;
     z-index: 21;
     
@@ -66,13 +66,13 @@
     display: flex;
     flex-direction: column;
     row-gap: 2px;
-    margin-left: 15px;
+    margin-left: 130px;
     height: 100vh;
     overflow-y: auto;
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 0px;
 } 
 ::-webkit-scrollbar-thumb {
     background: white;
@@ -81,9 +81,10 @@
     color: white;
     letter-spacing: 1px;
     /* padding: 5px 10px; */
-    font-size: 13px;
+    font-size: 10px;
     font-weight: bold;
-    border-radius: 4px;
+    padding: 3px;
+    border-radius: 6px;
 }
 .menu-container .menu-links .nav-link.active {
     background-color: white;
@@ -91,7 +92,7 @@
 }
 
 .menu-container.show-sidebar {
-    left: 0%;
+    right: 30%;
     opacity: 1;
 }
 .menu-nav .menu-content {
