--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -1,7 +1,7 @@
 .menu-nav {
     margin-top: 10px;
    /* background-color: #1E80C1; */
-   background-color: #414C6B;
+   /* background-color: #414C6B; */
    /* background: linear-gradient(145deg, #1E80C1, #414C6B); */
 }
 
@@ -15,6 +15,7 @@
 
 .menu-nav .menu-links-main {
     display: none;
+    
 }
 
 .menu-nav .right-side {
@@ -25,6 +26,8 @@
     display: flex;
     gap: 10px;
     align-items: center;
+    background: -webkit-linear-gradient(to right, #ff5858, #f857a6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ff5858, #f857a6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .two h1{
     color: white;
@@ -77,7 +80,7 @@
     background: white;
 }
 .menu-container .menu-links .nav-link {
-    color: white;
+     color: white;
     /* letter-spacing: 1px; */
     /* padding: 5px 10px; */
     font-size: 10px;
@@ -147,7 +150,7 @@
    width: 85%;
     margin-left: auto;
     margin-right: auto;
-    color: white;
+    /* color: white; */
     font-size: 14px;
 }
 .menu-nav .menucontent ol li {
@@ -157,7 +160,7 @@
     margin-right: auto;
 }
 .menu-nav .menucontent h5 {
-    color: white;
+    /* color: white; */
     background: rgb(66, 62, 62);
     margin-top: 20px;
     margin-left: 18px;
@@ -169,14 +172,14 @@
 .menu-nav .menucontent p{
     width: 90%;
     font-size: 14px;
-    color: white;
+    /* color: white; */
     margin-left: auto;
     margin-right: auto;
     padding-top: 5px;
 }
 .menu-nav .arrows {
     width: 100%;
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+    /* filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%); */
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
