--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -138,6 +138,7 @@
     width: 90%;
 }
 
+
 .menu-nav .right-image {
     display: none;
 }
@@ -171,9 +172,8 @@
 }
 .menu-nav .menucontent p{
     width: 90%;
-
+    color: black;
     font-size: 15px;
-    /* color: white; */
     margin-left: auto;
     margin-right: auto;
     padding-top: 5px;
@@ -262,6 +262,9 @@
         margin-left: 30px;
         margin-right: 20px;
     }
+    .menucontent p {
+        color: black;
+    }
     .menu-nav .right-image-text  {
         color: white;
         margin-top: 400px;
@@ -312,11 +315,11 @@
 }
 .menu-nav .menucontent p{
     font-size: 15px;
-    color: white;
+    color: black;
 }
 .menu-nav .arrows {
     width: 100%;
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+    /* filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%); */
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
