--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -260,13 +260,13 @@ background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, F
     }
     .menu-nav .nav-link {
         width: 100%;
-        font-size: 15px;
+        font-size: 13px;
         line-height: 2.0;
         font-weight: bold;
     }
   .menu-nav .nav-link.active {
-    background: white;
-    color: black;
+    background: black;
+    color: white;
     border-radius: 4px;
     padding: 4px;
   }  
@@ -285,8 +285,8 @@ background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, F
     }
 
     .menu-nav .right-image img {
-        width: 980px;
-        height: 100%;
+        width: 90vw;
+        height: 90%;
         justify-content: center;
         align-items: center;
         margin-left: 130px;
@@ -298,14 +298,14 @@ background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, F
     .menu-nav .right-image-text  {
         display: flex;
         color: white;
-        margin-top: 550px;
-        margin-left: auto;
+        margin-top: 500px;
+        margin-left: 460px;
         margin-right: auto;
     }
     
     .menu-nav .menu-two-parts {
         display: flex;
-        column-gap: 150px;
+        column-gap: 90px;
     }
     
 .middle-image {
@@ -314,7 +314,7 @@ background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, F
 .menu-nav .menucontent {
     width: 80%;
     height: 80vh;
-    margin-right: 60px;
+    margin-right: 40px;
     overflow-y: auto;
 }
 .menu-nav .menucontent h2 {
