--- a/CSS/manual.css
+++ b/CSS/manual.css
@@ -101,7 +101,7 @@ background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, F
     display: none;
 }
 
-.middle-image img {
+.middle-image {
     align-items: center;
     width: 400px;
     margin-left: auto;
@@ -212,6 +212,18 @@ background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, F
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+}
+table {
+    border-collapse:  collapse;
+    width: 100%;
+}
+td, th {
+    border:  1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+tr: :nth-child(even) {
+    background-color: #dddddd;
 }
 
 @media screen and (min-width:992px) {
