--- a/CSS/style.css
+++ b/CSS/style.css
@@ -88,9 +88,11 @@ img {
         background: #1488CC;  /* fallback for old browsers */
         background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
     .middle-line-container .card img {
-        width: 700px;
+        /* width: 600px; */
         display: block;
         margin-left: auto;
         margin-right: auto;
