--- a/CSS/style.css
+++ b/CSS/style.css
@@ -105,4 +105,18 @@ img {
         margin-top: 5px;
         margin-bottom: 10px;
     }
+    .middle-home h1 {
+        font-size: 120px;
+        color: transparent;
+        -webkit-text-stroke: 1px #fff;
+        background: url(../Images/360_F_486235005_LqvcbsyUmbFyZz8PECPJXBZNXtxNCxOu.jpg);
+        -webkit-background-clip: text;
+        background-position:  0 0;
+        animation: back 20s linear infinite;
+    }
+    @keyframes back {
+        100% {
+            background-position:  2000px 0;
+        }
+    }
 }
